force-app/main/default/objects/Requirement__c/Requirement__c.object-meta.xml
<CustomObject>
    <description>Captures business requirements as gathered and defined during a project.</description>
    <label>Detailed Requirement</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detailed Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>