force-app/main/default/objects/Requirement__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <inlineHelpText>Acceptance criteria is a definition in measurable terms of what must be done for the final product(s) to be acceptable to the Customer.</inlineHelpText>
    <label>Acceptance Criteria</label>
    <type>TextArea</type>
</CustomField>