force-app/main/default/objects/Requirement__c/fields/Activity_Number__c.field-meta.xml
<CustomField>
    <fullName>Activity_Number__c</fullName>
    <description>Micros Activity number for thier system</description>
    <label>Activity Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>