force-app/main/default/objects/Requirement__c/fields/Approach_Details__c.field-meta.xml
<CustomField>
    <fullName>Approach_Details__c</fullName>
    <label>Approach Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>