force-app/main/default/objects/Requirement__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User assigned to current needs of the requirement.</description>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Detailed_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>