force-app/main/default/objects/Requirement__c/fields/BPR_Session__c.field-meta.xml
<CustomField>
    <fullName>BPR_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPR Session</label>
    <referenceTo>BPR_Session__c</referenceTo>
    <relationshipLabel>Detailed Requirements</relationshipLabel>
    <relationshipName>Detailed_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>