force-app/main/default/objects/Requirement__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <inlineHelpText>Business units or groups that requested the requirement</inlineHelpText>
    <label>Business Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Customer Relations</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Corporate IT</fullName>
            </value>
            <value>
                <fullName>Global Sales B2B</fullName>
            </value>
            <value>
                <fullName>Key Accounts</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>Retail Accounts</fullName>
            </value>
            <value>
                <fullName>Region Sales</fullName>
            </value>
            <value>
                <fullName>Territory Sales</fullName>
            </value>
            <value>
                <fullName>ROMS</fullName>
            </value>
            <value>
                <fullName>ARMS</fullName>
            </value>
            <value>
                <fullName>Shoe Repair</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>