force-app/main/default/objects/Requirement__c/fields/Centerstance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Centerstance_Comments__c</fullName>
    <label>Centerstance Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>