force-app/main/default/objects/Requirement__c/fields/Cross_Function__c.field-meta.xml
<CustomField>
    <fullName>Cross_Function__c</fullName>
    <label>Cross Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avaya</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Eloqua</fullName>
            </value>
            <value>
                <fullName>Enfinity</fullName>
            </value>
            <value>
                <fullName>ExactTarget</fullName>
            </value>
            <value>
                <fullName>IA Lite</fullName>
            </value>
            <value>
                <fullName>Locate</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>PaymenTech</fullName>
            </value>
            <value>
                <fullName>Product Web Service</fullName>
            </value>
            <value>
                <fullName>Relate</fullName>
            </value>
            <value>
                <fullName>RIMS</fullName>
            </value>
            <value>
                <fullName>RWSC Retail Data Exchange</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
            </value>
            <value>
                <fullName>ShoeSearch</fullName>
            </value>
            <value>
                <fullName>Vertex</fullName>
            </value>
            <value>
                <fullName>Xstore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>