force-app/main/default/objects/Requirement__c/fields/Dependency__c.field-meta.xml
<CustomField>
    <fullName>Dependency__c</fullName>
    <label>Dependency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action Item - Business</fullName>
            </value>
            <value>
                <fullName>Action Item - Business Process Modified</fullName>
            </value>
            <value>
                <fullName>Action Item - Project Team</fullName>
            </value>
            <value>
                <fullName>Additional Details Needed</fullName>
            </value>
            <value>
                <fullName>App Exchange product</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Data Sample</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Requirements Workshop</fullName>
            </value>
            <value>
                <fullName>Technical Decision</fullName>
            </value>
            <value>
                <fullName>Third Party Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>