force-app/main/default/objects/Requirement__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The expected date for completion of tasks currently assigned to the requirement.</description>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>