force-app/main/default/objects/Requirement__c/fields/Flows__c.field-meta.xml
<CustomField>
    <fullName>Flows__c</fullName>
    <label>Work Flows</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>