force-app/main/default/objects/Requirement__c/fields/Gap__c.field-meta.xml
<CustomField>
    <fullName>Gap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gap</label>
    <type>Checkbox</type>
</CustomField>