force-app/main/default/objects/Requirement__c/fields/High_Level_Requirement__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High Level Requirement</label>
    <referenceTo>High_Level_Requirement__c</referenceTo>
    <relationshipLabel>Detailed Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>