force-app/main/default/objects/Requirement__c/fields/Iteration_1__c.field-meta.xml
<CustomField>
    <fullName>Iteration_1__c</fullName>
    <description>The development iteration within the phase of delivery.</description>
    <label>Iteration #</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>