force-app/main/default/objects/Requirement__c/fields/Iteration__c.field-meta.xml
<CustomField>
    <fullName>Iteration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Iteration</label>
    <referenceTo>Iteration__c</referenceTo>
    <relationshipLabel>Detailed Requirements</relationshipLabel>
    <relationshipName>Detailed_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>