force-app/main/default/objects/Requirement__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>User Stories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>