force-app/main/default/objects/Requirement__c/fields/Number_of_Integrations_Test_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Integrations_Test_Cases__c</fullName>
    <description>This is a hidden field used to determine if test cases were written for integrations.</description>
    <label>Number of Integrations Test Cases</label>
    <summaryFilterItems>
        <field>Test_Case__c.Test_Type__c</field>
        <operation>equals</operation>
        <value>Integration</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Case__c.Detailed_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>