force-app/main/default/objects/Requirement__c/fields/Number_of_Test_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Test_Cases__c</fullName>
    <label>Number of Test Cases</label>
    <summaryForeignKey>Test_Case__c.Detailed_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>