force-app/main/default/objects/Requirement__c/fields/Number_of_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Use_Cases__c</fullName>
    <label>Number of Use Cases</label>
    <summaryForeignKey>Use_Case_Det_Requirement__c.Detailed_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>