force-app/main/default/objects/Requirement__c/fields/Parent_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to specify the higher level process requirement that is the parent to this detailed requirement.</inlineHelpText>
    <label>Parent Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Associated Detailed Requirements</relationshipLabel>
    <relationshipName>Associated_Detailed_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>