force-app/main/default/objects/Requirement__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>1a</fullName>
            </value>
            <value>
                <fullName>1b</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>