force-app/main/default/objects/Requirement__c/fields/Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object__c</fullName>
    <label>Primary Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account Set-up</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Addresses</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Console</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contact Preferences</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>General System Setting</fullName>
            </value>
            <value>
                <fullName>Help</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Levels</fullName>
            </value>
            <value>
                <fullName>Microsite sales</fullName>
            </value>
            <value>
                <fullName>New Account Request</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>