force-app/main/default/objects/Requirement__c/fields/Project_Objective__c.field-meta.xml
<CustomField>
    <fullName>Project_Objective__c</fullName>
    <label>Project Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red Wing customer information is accessible through a single system</fullName>
            </value>
            <value>
                <fullName>Red Wing B2B customers can obtain anything they need whenever they need it</fullName>
            </value>
            <value>
                <fullName>&quot;Voice of the Customer&quot; feedback is integrated into the Customer WOW program</fullName>
            </value>
            <value>
                <fullName>Customers experience premium Red Wing service at all distribution points</fullName>
            </value>
            <value>
                <fullName>Provide a 360-degree view of the customer</fullName>
            </value>
            <value>
                <fullName>Maximize adoption and the user experience</fullName>
            </value>
            <value>
                <fullName>Provide actionable information via reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>