force-app/main/default/objects/Requirement__c/fields/Proposed_Approach__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Approach__c</fullName>
    <label>Proposed Approach</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Coding</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
                <default>true</default>
                <label>Configuration</label>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Partner Portal</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Self-Service Portal</fullName>
            </value>
            <value>
                <fullName>Sites</fullName>
            </value>
            <value>
                <fullName>Standard Feature</fullName>
            </value>
            <value>
                <fullName>System Integration</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>