force-app/main/default/objects/Requirement__c/fields/Prototype_Testing_Training_Script__c.field-meta.xml
<CustomField>
    <fullName>Prototype_Testing_Training_Script__c</fullName>
    <inlineHelpText>Enter the steps needed in Salesforce in order to fulfill the requirement</inlineHelpText>
    <label>Prototype/Testing/Training Script</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>