force-app/main/default/objects/Requirement__c/fields/Red_Wing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Red_Wing_Comments__c</fullName>
    <inlineHelpText>For Red Wing to enter requirement review comments, questions, and concerns.</inlineHelpText>
    <label>Red Wing Comments</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>