force-app/main/default/objects/Requirement__c/fields/Regression_Test_Progress__c.field-meta.xml
<CustomField>
    <fullName>Regression_Test_Progress__c</fullName>
    <label>Regression Test Progress</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>