force-app/main/default/objects/Requirement__c/fields/Release_Build_Number__c.field-meta.xml
<CustomField>
    <fullName>Release_Build_Number__c</fullName>
    <description>When completed or deployed, a requirement will reference a development release or build.</description>
    <label>Release/Build Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>