force-app/main/default/objects/Requirement__c/fields/Requirement_Description__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Description__c</fullName>
    <label>Requirement Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>