force-app/main/default/objects/Requirement__c/fields/Reviewed_by_Business__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed by Business</label>
    <type>Checkbox</type>
</CustomField>