force-app/main/default/objects/Requirement__c/fields/Reviewed_by_Project_Team__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_Project_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed by Project Team</label>
    <type>Checkbox</type>
</CustomField>