force-app/main/default/objects/Requirement__c/fields/Reviewed_by_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The requirement has been reviewed by/with the vendor.</description>
    <label>Reviewed by Vendor</label>
    <type>Checkbox</type>
</CustomField>