force-app/main/default/objects/Requirement__c/fields/RWS_Comments__c.field-meta.xml
<CustomField>
    <fullName>RWS_Comments__c</fullName>
    <label>RWS Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>