force-app/main/default/objects/Requirement__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Scope</fullName>
                <default>true</default>
                <label>In Scope</label>
            </value>
            <value>
                <fullName>Scope TBD</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>