force-app/main/default/objects/Requirement__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source (person or meeting) of requirement details</description>
    <inlineHelpText>Source (person or meeting) of requirement details</inlineHelpText>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>