force-app/main/default/objects/Requirement__c/fields/subphase__c.field-meta.xml
<CustomField>
    <fullName>subphase__c</fullName>
    <label>sub-phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>