force-app/main/default/objects/Requirement__c/fields/Technical_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Technical_Considerations__c</fullName>
    <label>Technical Considerations</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>