force-app/main/default/objects/Requirement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Process</fullName>
            </value>
            <value>
                <fullName>Business Rule</fullName>
            </value>
            <value>
                <fullName>Data Element(s)</fullName>
            </value>
            <value>
                <fullName>Regional/ Globalization</fullName>
            </value>
            <value>
                <fullName>Regulatory/Legal</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>