force-app/main/default/objects/Requirement__c/fields/Vendor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Comments__c</fullName>
    <label>Vendor Comments</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>