force-app/main/default/objects/Requirement__c/validationRules/Completed_Requirements_Release_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Requirements_Release_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Development_Status__c , &quot;Completed&quot;),  ISNULL( Release_Build_Number__c ) )</errorConditionFormula>
    <errorDisplayField>Release_Build_Number__c</errorDisplayField>
    <errorMessage>Completed Requirements must have a reference to a development release or build.</errorMessage>
</ValidationRule>