force-app/main/default/objects/Requirement__c/validationRules/No_Edits_to_Locked_Down_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edits_to_Locked_Down_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(ISPICKVAL(PRIORVALUE(Status__c ),&apos;Locked Down&apos;),
 ISBLANK( Centerstance_Comments__c ) )</errorConditionFormula>
    <errorDisplayField>Centerstance_Comments__c</errorDisplayField>
    <errorMessage>You are making an update to a Locked Down requirement. Please enter the changes made and the reason for the changes in the Comments field.</errorMessage>
</ValidationRule>