force-app/main/default/objects/Requirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>High_Level_Requirement__c</columns>
    <columns>Parent_Requirement__c</columns>
    <columns>Requirement_Name__c</columns>
    <columns>Cross_Function__c</columns>
    <columns>Data_Integration__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Scope__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Iteration__c</columns>
    <columns>Phase__c</columns>
    <columns>Iteration_1__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>AllRWSPublicGroup</group>
    </sharedTo>
</ListView>