force-app/main/default/objects/Requirement__c/listViews/C_R.listView-meta.xml
<ListView>
    <fullName>C_R</fullName>
    <columns>High_Level_Requirement__c</columns>
    <columns>Primary_Object__c</columns>
    <columns>NAME</columns>
    <columns>Requirement_Name__c</columns>
    <columns>Number_of_Test_Cases__c</columns>
    <columns>Requirement_Description__c</columns>
    <columns>Data_Integration__c</columns>
    <columns>Reviewed_by_Project_Team__c</columns>
    <columns>Reviewed_by_Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>High_Level_Requirement__c</field>
        <operation>equals</operation>
        <value>CR for Retail</value>
    </filters>
    <label>CR for retail</label>
</ListView>