force-app/main/default/objects/Requirement__c/listViews/Contact_DRs_Not_Started.listView-meta.xml
<ListView>
    <fullName>Contact_DRs_Not_Started</fullName>
    <columns>NAME</columns>
    <columns>Requirement_Name__c</columns>
    <columns>High_Level_Requirement__c</columns>
    <columns>Status__c</columns>
    <columns>Configuration_Status__c</columns>
    <columns>Development_Status__c</columns>
    <columns>Requirement_Description__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Contact</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected,Canceled,On Hold</value>
    </filters>
    <filters>
        <field>Configuration_Status__c</field>
        <operation>equals</operation>
        <value>Not started</value>
    </filters>
    <filters>
        <field>Phase__c</field>
        <operation>notEqual</operation>
        <value>2,3,4</value>
    </filters>
    <label>Contact - DRs Not Started</label>
    <sharedTo>
        <group>Contact_Solution_RWSC_Admin_Group</group>
    </sharedTo>
</ListView>