force-app/main/default/objects/Requirement__c/listViews/Contact_DRs_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Contact_DRs_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Requirement_Name__c</columns>
    <columns>High_Level_Requirement__c</columns>
    <columns>Requirement_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Configuration_Status__c</columns>
    <columns>Development_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Contact</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Review</value>
    </filters>
    <filters>
        <field>Phase__c</field>
        <operation>equals</operation>
        <value>1,1a,1b</value>
    </filters>
    <label>Contact - DRs Pending Approval Phase 1</label>
    <sharedTo>
        <group>Contact_Solution_RWSC_Admin_Group</group>
    </sharedTo>
</ListView>